[package]
name = "vgroup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgroups-rs = "0.3"
libc = "0.2"
nix = "0.26"

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
futures = "0.3.28"
futures-util = "0.3.28"

cursive = "0.20.0"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
